Put in OpenGL and SDL libraries

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Author: Eric Willisson (ericwillisson@gmail.com)
 
-This repository stores my libraries for various languages
+This repository stores my libraries for various languages. They are
+broken up by language and by toolkit.
+
